--- a/examples/autoindex/docker-compose.yml
+++ b/examples/autoindex/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     container_name: demo-autoindex
     restart: unless-stopped
     volumes:
-      - ./data:/app/data # Image uses data name for the folder so don't change the name
+      - ./data:/app/data
     ports:
       - 3500:3500
     networks:
