--- a/examples/arcade/docker-compose.yml
+++ b/examples/arcade/docker-compose.yml
@@ -7,10 +7,8 @@ networks:
 services:
   arcade:
   image: dyallo/arcade
-  container_name: arcade-homelab
+  container_name: arcade
   restart: unless-stopped
-  volumes:
-    - ./page:/app/page # https://github.com/jd-apprentice/-Arcade-Online-
   ports:
     - 3000:3000
   networks:
