feat(arcade): now working

--- a/docker/arcade/Dockerfile
+++ b/docker/arcade/Dockerfile
@@ -12,10 +12,10 @@ RUN apk add --no-cache nodejs=18.18.2-r0 npm=9.6.6-r0 unzip=6.0-r14 wget=1.21.4-
     rm -rf /var/cache/apk/*
 
 RUN wget https://github.com/jd-apprentice/arcade/archive/refs/heads/main.zip && \
-    unzip arcade-main.zip
+    unzip main.zip
 
 RUN mv arcade-main app && \
-    rm -rf arcade-main.zip
+    rm -rf main.zip
 
 EXPOSE ${PORT:-3000}
 
